tests/baselines/reference/importTypeGenericArrowTypeParenthesized.errors.txt
index.ts(1,1): error TS18056: Declaration file contains synthesized file reference directives: '"module.d.ts"'


==== module.d.ts (0 errors) ====
    declare module "module" {
        export interface Modifier<T> { }
    
        export function fn<T>(x: T): Modifier<T>;
    }
==== index.ts (1 errors) ====
    import { fn } from "module";
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"module.d.ts"'
    
    export const fail1 = fn(<T>(x: T): T => x);
    export const fail2 = fn(function<T>(x: T): T {
      return x;
    });
    
    export const works1 = fn((x: number) => x);
    type MakeItWork = <T>(x: T) => T;
    export const works2 = fn<MakeItWork>(x => x);
    